<?xml version="1.0"?>
<package>
    <name>allegro_hand</name>
    <version>2.0.1</version>
    <description>The allegro_hand package</description>

    <maintainer email="seanyi@wonikrobotics.com">Sean Yi</maintainer>

    <license>BSD</license>

    <!-- dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>allegro_hand_driver</build_depend>
    <build_depend>bhand</build_depend>
    <build_depend>libpcan</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <run_depend>allegro_hand_description</run_depend>
    <run_depend>allegro_hand_driver</run_depend>
    <run_depend>allegro_hand_parameters</run_depend>
    <run_depend>bhand</run_depend>
    <run_depend>joint_state_publisher</run_depend>
    <run_depend>libpcan</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>xacro</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
