<?xml version="1.0"?>
<package>
    <name>allegro_hand_parameters</name>
    <version>0.0.0</version>
    <description>parameters: calibration zeros, controller parameters</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="felix.duvallet@epfl.ch">Felix Duvallet</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
