<?xml version="1.0"?>
<package>
  <name>bhand</name>
  <version>0.0.0</version>
  <description>Computing grasp configurations.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="felix.duvallet@epfl.ch">Felix Duvallet</maintainer>
  <!-- NOTE: Author unknown. -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
